--- a/index.html
+++ b/index.html
@@ -22,18 +22,14 @@
 	</head>
 	<body>
 		<main>
-			<div class="container">
-				<div class="card">
-					<img src="images/image-qr-code.png" alt="A QR code for the website" />
-				</div>
+			<img src="images/image-qr-code.png" alt="A QR code for the website" />
 
-				<div class="code">
-					<h1>Improve your front-end skills by building projects</h1>
-					<p>
-						Scan the QR code to visit Frontend Mentor and take your coding
-						skills to the next level
-					</p>
-				</div>
+			<div class="code">
+				<h1>Improve your front-end skills by building projects</h1>
+				<p>
+					Scan the QR code to visit Frontend Mentor and take your coding skills
+					to the next level
+				</p>
 			</div>
 		</main>
 	</body>
